# ramana

./: .env.example  .gitignore  README.md  mcp-config.json  pyproject.toml  quick_start.sh  readme.md  requirements.txt  server.py  start.sh  test_server.py  web_server.py
src/: __init__.py  agents.py  config.py  handlers.py  pdf_processor.py
web/: index.html
web/static/: app.js  style.css
