[project]
name = "pdf-processor-mcp"
version = "0.1.0"
description = "MCP server for processing large PDFs with LangChain multi-agents and Gemini AI"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.5",
    "google-generativeai>=0.3.0",
    "pypdf2>=3.0.0",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
